# rust_zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  README.md  configuration.Local.toml  configuration.toml  docker-compose.yaml
.github/workflows/: rust.yml
.run/: Run zero2prod Development.run.xml  Run zero2prod Local.run.xml  Run zero2prod Production.run.xml  Run zero2prod Staging.run.xml
.sqlx/: query-0171e031d885bc3f6eee647db00be5580733559ae49418f2f36390b4c4d802a0.json  query-11f434718c2a933c81fdaee75d4ea1eafadad6664eaed8f67eb52743bc51f2fd.json  query-2ca960b20b74019a1af1417f5a56514f7c4871c32f929a3f5824776a53b9ad8b.json  query-459ecb8c5d7364342f08c44bc7e7f76b96c82b922b4cb482eb7a70fb2bdfc6ea.json  query-4c241a8eb2bc57bc416405e9ace954c17de6703036509f2dccc15e2d95a1f85d.json  query-7c7381dd1a974ca8dc0e3456a821e6b885d94576e7314502058cbc9e60c7234b.json  query-91004f0871927cf0895b36b9616c657074fdec3f27c5f4e0e7d5b3443a4ce091.json  query-96b9629d156e389af427a236f488b51907f1acfc36c60006b18cb0f109856747.json  query-caf0464cad65ddbb58d7a45fed225e829fb6cf84216e3eb6f0c31fd31fa364fa.json  query-da549e569b0f611f8e3936b4afa97c71dcab9b3f8f393ca7d1d6f0efff606b7e.json  query-dc7a83d953b69d37209c76202cb0aa4342b92757bff285830fc1711f1f708a50.json
migrations/: 20240716195359_initial.sql  20240721142301_add_status_to_subscriptions.sql  20240721143228_add_subscription_token_table.sql  20240818120401_add_user_table.sql  20240818152505_rename_password_column.sql
src/: app_config.rs  app_state.rs  config.rs  domain.rs  email_client.rs  error.rs  lib.rs  main.rs  startup.rs
src/domain/: value_objects.rs
src/domain/entities/: subscriber.rs
src/domain/value_objects/: email_status.rs  mod.rs  new_subscriber.rs  password_hash.rs  subscriber_email.rs  subscriber_id.rs  subscriber_name.rs
src/infrastructure/: mod.rs  sqlx_postgres_repository.rs
src/middlewares/: basic_auth.rs
src/routes/: confirm_subscription.rs  mod.rs  publish_newsletter.rs  subscribe.rs
tests/: health_check.rs
tests/helpers/: mod.rs
