[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["net", "rt-multi-thread", "macros", "rt"] }
thiserror = "1.0.62"
anyhow = "1.0.86"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
serde = { version = "1.0.204", features = ["derive"] }
maplit = "1.0.2"
uuid = { version = "1.10.0", features = ["v7"] }
chrono = "0.4.38"
sqlx = { version = "0.7.4", features = ["uuid", "macros", "chrono", "migrate", "postgres", "runtime-tokio"] }
config = "0.14.0"
tower-http = { version = "0.5.2", features = ["trace", "request-id"] }

[dev-dependencies]
reqwest = { version = "0.12.5", features = ["multipart"] }
const_format = "0.2.32"