[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.1", features = ["net", "rt-multi-thread", "macros", "rt"] }
#thiserror = "1.0.63"
anyhow = "1.0.86"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
serde = { version = "1.0.204", features = ["derive"] }
maplit = "1.0.2"
uuid = { version = "1.10.0", features = ["v7"] }
chrono = "0.4.38"
sqlx = { version = "0.8.0", features = ["uuid", "macros", "chrono", "migrate", "postgres", "runtime-tokio"] }
config = "0.14.0"
tower-http = { version = "0.5.2", features = ["trace", "request-id"] }
strum_macros = "0.26.4"
strum = "0.26.3"
validator = "0.18.1"
reqwest = { version = "0.12.5", features = ["multipart", "json"] }
rand = { version = "0.8.5" }
async-trait = "0.1.81"
tracing-opentelemetry = "0.25.0"
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
opentelemetry-otlp = "0.17.0"
opentelemetry = "0.24.0"
opentelemetry-semantic-conventions = "0.16.0"
derive_more = { version = "1.0.0-beta.7", features = ["full"] }
serde_json = "1.0.122"
either = "1.13.0"

[dev-dependencies]
const_format = "0.2.32"
fake = "2.9.2"
